fix a problem with the bookshelf header having too much space

--- a/content/assets/css/bookshelf.css
+++ b/content/assets/css/bookshelf.css
@@ -1,4 +1,4 @@
-header {
+header.bookshelf-header {
     display: flex;
     justify-content: flex-start;
     align-items: baseline;
